--- a/administrador/index.html
+++ b/administrador/index.html
@@ -107,6 +107,10 @@
                                 <div class="card-footer">
                                   <a href="#" class="card-link">Ver Detalles</a>
                                   <i class="fa-solid fa-chevron-right fa-2x"></i>
+                                  <div class="details" style="display:none">
+                                    <a href="listado-docentes.html" class="dropdown-item">Listado de Docentes</a>
+                                    <a href="invitar-docente.html" class="dropdown-item">Invitar Docente</a>
+                                </div>
                                 </div>
                               </div>
                             </div>
@@ -161,6 +165,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="../js/scripts.js"></script>
+        <script src="../js/card.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="../assets/demo/chart-area-demo.js"></script>
         <script src="../assets/demo/chart-bar-demo.js"></script>
