--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -124,6 +124,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/session/forgotPassword.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/login.js"></script>
   </body>
